Fixed strange text overflow

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -38,3 +38,8 @@
 .production-foot {
   margin-top:20px;
 }
+
+
+.modal-description {
+    word-wrap: break-word;
+}
